# pipe-line-lua

./: .busted  .gitignore  .luarc.json  Cargo.toml  Makefile  README.md
benches/: lua_pipeline_core_compare.rs  lua_suites.rs  lua_suites_pipecopy.rs  lua_suites_single_stage_mode.rs  lua_suites_single_stage_table.rs
benches/lua/: core_pipeline_compare.lua
doc/: INDEX.md  async-handoff.md  completion-protocol.md  consumer.md  continuation-handoff.md  lifecycle.md  line.md  metatables.md  registry.md  run.md  segment-authoring.md  segment-instancing.md  segment.md  selecting.md  termichatter.txt
doc/adr/: README.md  adr-stop-drain-and-cancel-signal.md  adr-transport-policy-interface.md
doc/archive/: cleanup.md  coop-tools.md  coop2.md  mpsc-decomp-tasks.md  pipecopy.md  pipenext-status.md  re-async.md  re-readme.md  rename.md  safe-task.md  status.md  status2.md
doc/discovery/: adr-async-boundary-segments.md  async3.md  async4.md  async5.md  coop2.md  doc-fixes.md  driver.md  mpsc-decomp-tasks.md  mpsc-decomposition.md  pipecopy.md  pipenext-status.md  post-async-improvements.md  re-async.md  readme-pipe-line.md  rename.md  requirements.md  self-ify.md  status.md  status2.md
doc/review/: pipecopy-next.md
doc/transcript/: lifecycle-state.md  segment-lifecycle.md
implementations/pipecopy/: README.md
implementations/pipeflow/: EFFECT-PUBSUB.md  EFFECT.md  TYPESCRIPT.md  WALK-EFFECT.md  lattice-pipe-resolver.md
implementations/v1/: consumer.lua  drivers.lua  init.lua  logger.lua  pipeline.lua
lua/pipe-line/: async.lua  (+16 more)
tests/: busted.lua  test_helper.lua
(+200 files in other folders)
