[package]
name = "termichatter-lua-bench"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lua_suites"
harness = false

[[bench]]
name = "lua_suites_single_stage_table"
harness = false

[[bin]]
name = "bench-history"
path = "src/bin/bench_history.rs"
